@@ -1,6 +1,7 @@
 package de.saring.sportstracker.gui;
 
 import de.saring.sportstracker.data.Exercise;
+import de.saring.sportstracker.gui.views.EntryViewEventHandler;
 import javafx.event.ActionEvent;
 import javafx.stage.WindowEvent;
 
@@ -12,7 +13,7 @@ import java.time.LocalDate;
  *
  * @author Stefan Saring
  */
-public interface STController {
+public interface STController extends EntryViewEventHandler {
 
     /**
      * Initializes the main SportsTracker application window (loaded from FXML).
@@ -44,44 +45,6 @@ public interface STController {
      * Event handler for action "Quit SportsTracker".
      */
     void onQuit(ActionEvent event);
-
-    /**
-     * Event handler for action "Add new Exercise".
-     */
-    void onAddExercise(ActionEvent event);
-
-    /**
-     * Event handler for action "Add new Note".
-     */
-    void onAddNote(ActionEvent event);
-
-    /**
-     * Event handler for action "Add new Weight".
-     */
-    void onAddWeight(ActionEvent event);
-
-    /**
-     * Sets the date to be used when new entries (e.g. exercises) will be created.
-     * When set to null then the current date will be used instead.
-     *
-     * @param date the date to be used (the time will be set to 12:00)
-     */
-    void setDateForNewEntries(LocalDate date);
-
-    /**
-     * Event handler for action "Edit selected Entry".
-     */
-    void onEditEntry(ActionEvent event);
-
-    /**
-     * Event handler for action "Copy selected Entry".
-     */
-    void onCopyEntry(ActionEvent event);
-
-    /**
-     * Event handler for action "Delete selected Entry".
-     */
-    void onDeleteEntry(ActionEvent event);
 
     /**
      * Event handler for action "View HRM file of selected entry in ExerciseViewer".
@@ -149,26 +112,6 @@ public interface STController {
     void onAbout(ActionEvent event);
 
     /**
-     * Starts the action for adding a new exercise for the specified HRM file (called when
-     * a HRM file has been dropped on a day cell in the calendar view). The new exercise
-     * will contain the data imported from the specified HRM file.
-     *
-     * @param hrmFilePath the absolute path of the HRM file
-     */
-    void onAddExerciseForDroppedHrmFile(String hrmFilePath);
-
-    /**
-     * Assigns the specified HRM filename to the specified exercise (called when a HRM
-     * file has been dropped on an exercise entry in the calendar view). If the exercise
-     * is null, then a new exercise will be created and displayed in the
-     * Exercise dialog (the HRM data will be imported).
-     *
-     * @param hrmFilePath the absolute path of the HRM file
-     * @param exercise the exercise on which the file has been dropped
-     */
-    void onAssignDroppedHrmFileToExercise(String hrmFilePath, Exercise exercise);
-
-    /**
      * Checks for existing sport types. A message dialog will be displayed when
      * there are no sport types available yet.
      *
@@ -188,12 +131,4 @@ public interface STController {
      * Updates the complete view to show the current application data.
      */
     void updateView();
-
-    /**
-     * Updates the action status properties and the status bar content according to the
-     * current entry selection in the current view. The actions are enabled or disabled
-     * depending on the current entry selection, document state and displayed view.
-     * The status bar displays a summary of the currently selected entries.
-     */
-    void updateActionsAndStatusBar();
 }
