@@ -18,6 +18,7 @@ v7.1.1:
     - much faster startup time (DI takes about 200 msec instead of 700 msec)
     - much smaller library (6 KByte instead of 2,7 MByte for Guice incl. Guava)
     - less memory usage after startup (about 10 MByte)
+  - removed cyclic dependencies on STController in all entry views    
  ExerciseViewer changes:
   - added support for Polar RCX3 HRM files (contains limited data only)
  Project changes:
